Paradoxe anniversaires et Selbee

--- a/docs/index.Rmd
+++ b/docs/index.Rmd
@@ -16,10 +16,11 @@ background-image: url(https://www.onlinecasinoreports.com/images/cashwinfall.jpg
 background-size: contain
 
 ```{r setup, include=FALSE}
+library(tidyverse)
+library(kableExtra)
+
 options(htmltools.dir.version = FALSE)
 knitr::opts_chunk$set(echo = FALSE)
-
-library(tidyverse)
 ```
 
 ---
@@ -513,7 +514,7 @@ $$
 
 ## Le paradoxe des anniversaires
 
-```{r paradoxe-anniversaires,fig.height=5,dev="svg",cache=TRUE}
+```{r paradoxe-anniversaires-data,cache=TRUE}
 p <- function(n){
   
   temp <- rep(NA, n)
@@ -530,8 +531,16 @@ birthday <- tibble(n=id, `Probabilité de coïncidence`=p(365)) %>%
   mutate(`Probabilité de non-coïncidence` = 1-`Probabilité de coïncidence`) %>% 
   pivot_longer(!n,names_to="Probabilités", values_to="proba")
 
+birthday_table <- birthday %>% 
+  filter(Probabilités=="Probabilité de coïncidence") %>% 
+  filter(n %in% c(5,10,15,20,23,25,30,40,50,60,80,100,200,300,365)) %>% 
+  mutate(`Probabilités` = proba) %>% 
+  select(n,`Probabilités`)
+```
+
+```{r paradoxe-anniversaires-plot1,fig.height=5,dev="svg"}
 birthday %>% ggplot(aes(x=n))+
-  geom_line(aes(y=proba,color=`Probabilités`))+
+  geom_line(aes(y=proba,color=`Probabilités`),size=1)+
   scale_x_continuous(breaks = seq(from=0,to=365,by=50))+
   labs(
     x = "Nombre de personnes",
@@ -542,9 +551,55 @@ birthday %>% ggplot(aes(x=n))+
 
 ---
 
+## Le paradoxe des anniversaires
+
+```{r paradoxe-anniversaires-plot2,fig.height=5,dev="svg"}
+birthday %>% ggplot(aes(x=n))+
+  geom_line(aes(y=proba,color=`Probabilités`),size=1)+
+  scale_x_continuous(breaks = seq(from=0,to=365,by=50))+
+  labs(
+    x = "Nombre de personnes",
+    y = "Probabilité"
+  )+
+  theme(legend.position = "bottom")+
+  geom_hline(yintercept=0.5, color="orange", size=1)+
+  geom_vline(xintercept=23, color="orange", size=1)+
+  annotate("text",x=35,y=0,label = c("23") , color="orange",size=5,fontface="bold")
+```
+
+---
+
+## Le paradoxe des anniversaires
+
+```{r paradoxe-anniversaires-table}
+birthday_table %>% 
+  kable(format = "html") %>% 
+  kable_styling(bootstrap_options = c("striped", "hover", "condensed"),font_size = 16)
+```
+
+---
+
 ## La stratégie de Selbee
 
-```{r paradoxe-cashwinfall,fig.height=5,dev="svg",cache=TRUE}
+- On utilise la même stratégie que pour le paradoxe des anniversaires.
+
+- Il y a $n$ billets, pour chacun il y a $\binom{46}{6}=$ `r format(choose(46,6),big.mark = " ")` billets possibles, donc au total si on ne se fixe aucune contrainte, il y a $(9\ 366\ 819)^n$ possibilités.
+
+- Le première billet a 9 366 819 choix, le second 9 366 818, le troisième 9 366 817 et ainsi de suite.
+
+$$
+\begin{aligned}
+\overline{p}(n)=\frac{9\ 366\ 819}{9\ 366\ 819}\cdot\frac{9\ 366\ 818}{9\ 366\ 819}\cdot\frac{9\ 366\ 817}{9\ 366\ 819}\cdot\cdot\cdot\frac{9\ 366\ 819-n+1}{9\ 366\ 819}
+\end{aligned}
+$$
+
+- Or, l’évènement « un billet différent à chaque achat » est le complémentaire de « au moins deux billets identiques ». Par conséquent la probabilité recherchée est $p(n)=1-\overline {p}(n)$.
+
+---
+
+## La stratégie de Selbee
+
+```{r paradoxe-cashwinfall-data,cache=TRUE}
 p <- function(n){
   
   temp <- rep(NA, n)
@@ -561,9 +616,11 @@ cashwinfall <- tibble(n=id, `Probabilité de coïncidence`=p(choose(46,6))) %>%
   filter(`Probabilité de coïncidence` < 1) %>% 
   mutate(`Probabilité de non-coïncidence` = 1-`Probabilité de coïncidence`) %>% 
   pivot_longer(!n,names_to="Probabilités", values_to="proba")
+```
 
+```{r paradoxe-cashwinfall-plot1,fig.height=5,dev="svg"}
 cashwinfall %>% ggplot(aes(x=n))+
-  geom_line(aes(y=proba,color=`Probabilités`))+
+  geom_line(aes(y=proba,color=`Probabilités`),size=1)+
   scale_x_continuous(breaks = seq(from=0,to=30000,by=5000))+
   labs(
     x = "Nombre de billets",
@@ -572,6 +629,23 @@ cashwinfall %>% ggplot(aes(x=n))+
   theme(legend.position = "bottom")
 ```
 
+---
+
+## La stratégie de Selbee
+
+```{r paradoxe-cashwinfall-plot2,fig.height=5,dev="svg"}
+cashwinfall %>% ggplot(aes(x=n))+
+  geom_line(aes(y=proba,color=`Probabilités`),size=1)+
+  scale_x_continuous(breaks = seq(from=0,to=30000,by=5000))+
+  labs(
+    x = "Nombre de billets",
+    y = "Probabilité"
+  )+
+  theme(legend.position = "bottom")+
+  geom_hline(yintercept=0.5, color="orange", size=1)+
+  geom_vline(xintercept=3604, color="orange", size=1)+
+  annotate("text",x=4600,y=0,label = c("3604") , color="orange",size=5,fontface="bold")
+```
 
 ---
 
