--- a/docs/index.Rmd
+++ b/docs/index.Rmd
@@ -19,9 +19,14 @@ background-size: contain
 library(tidyverse)
 library(kableExtra)
 library(gtools)
+library(scales)
 
 options(htmltools.dir.version = FALSE)
 knitr::opts_chunk$set(echo = FALSE)
+```
+
+```{r xaringan-editable, echo=FALSE}
+xaringanExtra::use_editable(expires = 1)
 ```
 
 ---
@@ -698,25 +703,127 @@ loterie1 %>%
 
 - Le joueur gagne si deux (ou trois) des trois nombres sur un certain billet sont parmis ceux choisis aléatoirement.
 
-- Nous gagnons 6$ si nous avons les trois nombres.
+- Nous gagnons 6$ si nous avons les trois nombres (nous appelerons ce résultat un **trio**).
 
-- Nous gagnons 2$ si nous avons deux nombres sur trois.
+- Nous gagnons 2$ si nous avons deux nombres sur trois (nous appelerons ce résultat un **duo**).
 
 - Nous ne gagnons rien si nous avons un nombre ou moins sur trois.
 
 ---
 
-class: inverse, center, middle
+## Probabilités si nous choisissons 7 billets
 
-## Nous allons tout le monde choisir 7 billets différents en respectant les règles de la loterie transylvanienne, c'est-à-dire choisir trois nombres sans remise entre 1 et 7 inclusivement.
+```{r transylvanian-lottery-probability}
+pdeuce <- function(number) {
+  
+  p <- choose(3,2)*choose(4,1)/choose(7,3)
+  proba <- dbinom(number,7,p)
+  
+  return(proba)
+  
+}
 
-## Celui qui fait le plus *d'argent* gagne...
+pthree <- function(number) {
+  
+  p <- choose(3,3)/choose(7,3)
+  proba <- dbinom(number,7,p)
+  
+  return(proba)
+  
+}
+
+transylvanian <- tibble (
+  number = seq(from=0,to=7,by=1)
+) %>% 
+  mutate(
+    p_deux = map_dbl(number,pdeuce),
+    p_trois = map_dbl(number,pthree),
+    prix_deux = 2*number*p_deux,
+    prix_trois = 6*number*p_trois
+  )
+
+total_prix_deux = sum(transylvanian$prix_deux)
+total_prix_trois = sum(transylvanian$prix_trois)
+
+deuce <- transylvanian %>% 
+  mutate(
+    "Vous obtenez" = ifelse(number<2,sprintf("%.0f duo", number),sprintf("%.0f duos", number)),
+    "Avec une probabilité de" = p_deux,
+    "Et un prix de" = dollar(prix_deux)
+  ) %>% 
+  select(
+    `Vous obtenez`,
+    `Avec une probabilité de`,
+    `Et un prix de`
+  )
+
+thrice <- transylvanian %>% 
+  mutate(
+    "Vous obtenez" = ifelse(number<2,sprintf("%.0f trio", number),sprintf("%.0f trios", number)),
+    "Avec une probabilité de" = p_trois,
+    "Et un prix de" = dollar(prix_trois)
+  ) %>% 
+  select(
+    `Vous obtenez`,
+    `Avec une probabilité de`,
+    `Et un prix de`
+  )
+```
+
+.pull-left[
+```{r}
+kbl(deuce)
+```
+
+Vous obtenez donc `r total_prix_deux` $ en moyenne avec vos duos.
+]
+
+.pull-right[
+```{r}
+kbl(thrice)
+```
+
+Vous obtenez donc `r total_prix_trois` $ en moyenne avec vos trios.
+]
+
+### On s'attend donc à recevoir `r total_prix_deux+total_prix_trois` $ en moyenne en achetant 7 billets.
 
 ---
 
-```{r random-org-lottery-generator}
-knitr::include_url("https://www.random.org/quick-pick/?tickets=1&lottery=3x7.0x26")
-```
+class: inverse, center, middle
+
+## Nous allons tout le monde choisir 7 billets en respectant les règles de la loterie transylvanienne, c'est-à-dire choisir trois nombres sans remise entre 1 et 7 inclusivement.
+
+## Pour continuer à jouer, vous devez faire au moins 6$, les autres sont éliminés.
+
+## On recommence avec les joueurs restants jusqu'à ce qu'il ne reste qu'une personne!
+
+---
+
+class: inverse, center, middle
+
+## Choisissez 7 billets (différents ou non) en respectant les règles de la loterie transylvanienne, c'est-à-dire choisir trois nombres sans remise entre 1 et 7 inclusivement.
+
+---
+
+## Voici mes numéros...
+
+# 1-2-5, 1-3-6, 1-4-7, 2-3-7, 2-4-6, 3-4-5 et 5-6-7
+
+
+Nous allons utiliser [www.random.org](https://www.random.org/quick-pick/?tickets=1&lottery=3x7.0x26) pour trouver le billet gagnant. 
+
+Le billet est donc...
+
+.center[
+## .can-edit[X-X-X]
+]
+
+Je gagne donc...
+
+.center[
+## .can-edit[X] $
+]
 
 ---
 
