--- a/docs/index.Rmd
+++ b/docs/index.Rmd
@@ -22,12 +22,18 @@ library(gtools)
 library(scales)
 
 options(htmltools.dir.version = FALSE)
-knitr::opts_chunk$set(echo = FALSE)
+knitr::opts_chunk$set(echo = FALSE, cache = TRUE)
 ```
 
 ```{r xaringan-editable, echo=FALSE}
 xaringanExtra::use_editable(expires = 1)
 ```
+
+---
+
+class: inverse, center, middle
+
+# Comment ça fonctionne la loterie?
 
 ---
 
@@ -311,6 +317,12 @@ $$ \dfrac{300\$\times 1}{200}+\dfrac{0\$\times 199}{200} = 1,50\$ $$
 
 ---
 
+class: inverse, center, middle
+
+# Cash WinFall
+
+---
+
 ## Cash WinFall : les probabilités
 
 - Les 6 numéros: $\dfrac{\binom{6}{6}}{\binom{46}{6}}= \dfrac{1}{9\ 366\ 819}$
@@ -364,7 +376,7 @@ class:inverse, center, middle
 
 - Le gros lot était par contre d'un maximum de 2 000 000$.
 
-- Si le gros lot atteignait 2 000 000$ et que personne ne le gagnait, *une partie de l'argent du gros lot était redistribué aux lots de moindre valeur*.
+- Si le gros lot atteignait 2 000 000$ et que personne ne le gagnait, *une partie de l'argent du gros lot était redistribuée aux lots de moindre valeur*.
 
 ---
 
@@ -433,7 +445,44 @@ Image credit: [Huffington Post](https://highline.huffingtonpost.com/articles/en/
 
 TO DO: BIOGRAPHIE RAPIDE
 
+- En 1966, en travaillant pour *Kellog's*, il déchiffre le code de la compagnie *General Mills* qui indiquait l'usine, le quart de travail, la date et l'heure de la cuisson de leurs céréales.
+
+- Avec son fils, il décide d'acheter des rouleaux de pièces de monnaie en espérant que la banque ne les avait pas ouverts. Son idée était que peut-être les clients de la banque avaient laissés des pièces rares et précieuses parmi les pièces normales.
+
+- À l'âge de 64 ans, fraîchement retraité, il prend une brochure décrivant une nouvelle loterie...
+
+
+
 CHOISIS SES BILLETS ALÉATOIREMENT
+
+---
+
+## Gerard Selbee
+
+.pull-left[
+La première fois que Selbee joue à CashWinFall, il perd de l'argent.
+
+| 2 200$ | Argent investi |
+|--------|----------------|
+| 2 150$ | Argent gagné   |
+| -50$   | Profit         |
+
+Il comprend qu'il n'a pas investi suffisament d'argent pour gagner.
+]
+
+.pull-right[
+Trois mois plus tard, il joue une seconde fois à CashWinFall.
+
+| 8 000$ | Argent investi |
+|--------|----------------|
+| 15 700$ | Argent gagné   |
+| +7 700$   | Profit         |
+
+]
+
+- Les terminaux de lotterie ne pouvaient qu'imprimer 10 
+
+Lottery terminals in convenience stores could print only 10 slips of paper at a time, with up to 10 lines of numbers on each slip (at $1 per line), which meant that if you wanted to bet $100,000 on Winfall, you had to stand at a machine for hours upon hours, waiting for the machine to print 10,000 tickets. Code in the purchase. Push the “Print” button. Wait at least a full minute for the 10 slips to emerge. Code in the next purchase. Hit “Print.” Wait again. Jerry and Marge knew all the convenience store
 
 ---
 
@@ -488,9 +537,15 @@ class:inverse, center, middle
 
 - Le paradoxe des anniversaires résulte de l'estimation probabiliste du nombre de personnes que l'on doit réunir pour avoir au moins une chance sur deux que deux personnes de ce groupe aient leur anniversaire le même jour. 
 
-- Il se trouve que ce nombre est 23, ce qui choque un peu l'intuition. 
+--
+
+- Il se trouve que ce nombre est 23, ce qui choque un peu l'intuition.
+
+--
 
 - À partir d'un groupe de 57 personnes, la probabilité est supérieure à 99 %.
+
+--
 
 - Il s'agit d'un paradoxe non pas dans le sens de contradiction logique, mais dans le sens où c'est une vérité mathématique qui contredit l'intuition : la plupart des gens estiment que cette probabilité est très inférieure à 50 %.
 
@@ -711,6 +766,52 @@ loterie1 %>%
 
 ---
 
+class: inverse, center, middle
+
+## Si nous choisissons 7 billets (différents ou non), quelle est l'espérance de votre revenu?
+
+### Nous gagnons 6$ si nous avons les trois nombres.
+
+### Nous gagnons 2$ si nous avons deux nombres sur trois.
+
+### Nous ne gagnons rien si nous avons un nombre ou moins sur trois.
+
+---
+
+## Probabilités si nous choisissons 7 billets
+
+- La probabilité d'obtenir un **trio** lors de l'achat d'un seul billet est donnée par $\dfrac{\binom{3}{3}}{\binom{7}{3}}=\dfrac{1}{35}$.
+
+- Puisque les 7 billets peuvent être choisis avec remise, le nombre de **trios** suit une loi binomiale $B\left(7,\frac{1}{35}\right)$. 
+
+- L'espérance de cette loi binomiale est $7\cdot\frac{1}{35}=\frac{1}{5}=0,20$. 
+
+- Chaque **trio** rapporte 6$ et donc on s'attend à obtenir 1,20$.
+
+---
+
+## Probabilités si nous choisissons 7 billets
+
+- La probabilité d'obtenir un **duo** lors de l'achat d'un seul billet est donnée par $\dfrac{\binom{3}{2}\binom{4}{1}}{\binom{7}{3}}=\dfrac{12}{35}$.
+
+- Puisque les 7 billets peuvent être choisis avec remise, le nombre de **duos** suit une loi binomiale $B\left(7,\frac{12}{35}\right)$. 
+
+- L'espérance de cette loi binomiale est $7\cdot\frac{12}{35}=\frac{12}{5}=2,40$. 
+
+- Chaque **duo** rapporte 2$ et donc on s'attend à obtenir 4,80$.
+
+---
+
+## Probabilités si nous choisissons 7 billets
+
+- Chaque **trio** rapporte 6$ et donc on s'attend à obtenir 1,20$.
+
+- Chaque **duo** rapporte 2$ et donc on s'attend à obtenir 4,80$.
+
+### En additionnant le revenu des **trios** et des **duos**, nous obtenons un revenu total de 6$.
+
+---
+
 ## Probabilités si nous choisissons 7 billets
 
 ```{r transylvanian-lottery-probability}
@@ -794,7 +895,11 @@ class: inverse, center, middle
 
 ## Nous allons tout le monde choisir 7 billets en respectant les règles de la loterie transylvanienne, c'est-à-dire choisir trois nombres sans remise entre 1 et 7 inclusivement.
 
+--
+
 ## Pour continuer à jouer, vous devez faire au moins 6$, les autres sont éliminés.
+
+--
 
 ## On recommence avec les joueurs restants jusqu'à ce qu'il ne reste qu'une personne!
 
