--- a/docs/index.Rmd
+++ b/docs/index.Rmd
@@ -1174,8 +1174,80 @@ denniston %>%
 
 ---
 
+## CashWinFall et Denniston
 
+```{r, random-number-seed, echo=FALSE}
+set.seed(42)
+wticket <- sort(sample(46,6))
 
+t1 <- wticket[c(1,2,3,4,5)]
+t2 <- wticket[c(1,2,3,4,6)]
+t3 <- wticket[c(1,2,3,5,6)]
+t4 <- wticket[c(1,2,4,5,6)]
+t5 <- wticket[c(1,3,4,5,6)]
+t6 <- wticket[c(2,3,4,5,6)]
+```
+
+- Supposons que le billet gagnant est le `r wticket`.
+
+- Vous avez `r format(nrow(cashwinfall),big.mark = " ")` chances sur `r format(choose(46,6),big.mark = " ")` de gagner le gros lot, soit environ `r format(nrow(cashwinfall)/choose(46,6)*100)`% des chances.
+
+- Si vous n'avez pas le billet gagnant, vous pouvez gagner en ayant un billet ayant cinq des six numéros.
+
+---
+
+## `r wticket`
+
+- Avez-vous un billet avec `r t1`? *Un* des billets de Denniston possède cette combinaison.
+
+- La seule manière de ne pas l'avoir est que le billet de Denniston était `r c(t1,47)` ou `r c(t1,48)`.
+
+- Mais qu'en est-il de la combinaison `r t2`? Si 47 faisait partie de `r c(t1,47)`, il est impossible que `r c(t2,47)` fasse partie de la liste de Denniston, car vous auriez deux billets avec la même combinaison de cinq numéros.
+
+- Le raisonnement est identique avec 48.
+
+---
+
+## `r wticket`
+
+De toutes les combinaisons possibles de cinq numéros parmi 6:
+
+.center[
+`r t1`
+
+`r t2`
+
+`r t3`
+
+`r t4`
+
+`r t5`
+
+`r t6`
+]
+
+Vous êtes *assurés* d'en avoir au moins quatre! 
+
+---
+
+## `r wticket`
+
+```{r, proba-denniston}
+pjackpot <- nrow(cashwinfall)/choose(46,6)*100
+p4 <- ((n47-n47_48)/nrow(denniston))^2*100
+p5 <- (n47+n48-n47_48)/nrow(denniston)*100
+p6 <- 100-p4-p5-pjackpot
+```
+
+Si vous acheter les `r format(nrow(cashwinfall),big.mark = " ")` billets de Denniston vous avez:
+
+`r pjackpot`% de gagner le gros lot
+
+`r p6`% de gagner six des combinaisons 5 dans 6
+
+`r p5`% de gagner cinq des combinaisons 5 dans 6
+
+`r p4`% de gagner quatre des combinaisons 5 dans 6
 
 
 
