--- a/docs/index.Rmd
+++ b/docs/index.Rmd
@@ -10,10 +10,12 @@ output:
       highlightStyle: github
       highlightLines: true
       countIncrementalSlides: false
+
 ---
 
-background-image: url(https://www.onlinecasinoreports.com/images/cashwinfall.jpg)
-background-size: contain
+class:inverse, center, middle
+
+<img src="https://media.giphy.com/media/lptjRBxFKCJmFoibP3/giphy.gif?cid=ecf05e47pnwqezpf4pdm90vbdp7mfq0m8w2x7qkolz1bpy6j&rid=giphy.gif&ct=g" width="800">
 
 ```{r setup, include=FALSE}
 library(tidyverse)
@@ -38,6 +40,19 @@ class: inverse, center, middle
 
 ---
 
+background-image: url(https://www.onlinecasinoreports.com/images/cashwinfall.jpg)
+background-size: contain
+
+---
+
+class: center, middle
+
+## Cash WinFall, le lundi 23 janvier 2012
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/Y35uQ7b45qs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+---
+
 ## Comment ça fonctionne la loterie?
 
 - Nous nous intéressons aux loteries de type $k/n$.
@@ -49,13 +64,6 @@ class: inverse, center, middle
 - Le gros lot est gagné si les $k$ numéros choisis par l'acheteur sont ceux pigés.
 
 - D'autres lots peuvent être gagnés en ayant choisi $l$ numéros parmi les $k$ pigés, avec $l<k$.
-
----
-class: center, middle
-
-## Cash WinFall, le lundi 23 janvier 2012
-
-<iframe width="560" height="315" src="https://www.youtube.com/embed/Y35uQ7b45qs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 ---
 
@@ -90,9 +98,9 @@ class: inverse, center, middle
 
 - La probabilité d'un certain événement $A$, notée $P(A)$, associe une valeur entre 0 et 1 que l'événement se réalise.
 
-- Lorsque $P(A)=1$, l'événement est dit presque sûr (ou quasi certain), c'est-à-dire qu'il a « toutes les chances » de se réaliser. 
+- $P(A)=1$. 
 
-- À l'inverse si $P(A)=0$, $A$ est dit négligeable (ou quasi impossible), c'est-à-dire qu'il a une chance nulle de se réaliser.
+- $P(A)=0$.
 
 - Lorsque le nombre de résultats possibles de l'expérience est fini et que ces résultats sont équiprobables, la probabilité de $A$ est obtenue par : $$ P(A)=\dfrac{\text{nombre de cas où $A$ se réalise}}{\text{nombre de cas possibles}} $$
 
@@ -201,9 +209,9 @@ $$P(\text{obtenir une somme de 7})=\frac{6}{36}=\frac{1}{6}$$
 
 - En mathématiques, une combinaison est une sélection d'objets choisis parmi une collection, de telle manière à ce que l'ordre de sélection n'a pas d'importance.
 
-- Plus formellement, une $k$-combinaison d'un ensemble $S$ est un sous-ensemble de $k$ éléments distincts de $S$. Si l'ensemble possède $n$ éléments, le nombre de $k$-combinaisons est égal au coefficient binomial.
+- Le nombre de combinanisons est donné par le coefficient binomial:
 
-- Le coefficient binomial est noté $\binom{n}{k}=C_k^n=\dfrac{n!}{k!(n-k)!}$.
+$$\binom{n}{k}=C_k^n=\dfrac{n!}{k!(n-k)!}$$
 
 ---
 
@@ -283,11 +291,9 @@ $$\binom{5}{3}=C_3^5=\dfrac{5!}{3!(5-3)!}=10$$
 
 - En théorie des probabilités, l'espérance mathématique d'une variable aléatoire réelle est, intuitivement, la valeur que l'on s'attend à trouver, en moyenne, si l'on répète un grand nombre de fois la même expérience aléatoire. 
 
-- Elle se note $E(X)$.
+- $E(X)$.
 
-- Elle correspond à une moyenne pondérée des valeurs que peut prendre cette variable. 
-
-- Dans le cas où celle-ci prend un nombre fini de valeurs, il s'agit d'une moyenne pondérée par les probabilités d'apparition de chaque valeur.
+- Nous nous intéressons au cas où la variable aléatoire prend un nombre fini de valeurs.
 
 - Si la variable X prend les valeurs $x_1$, $x_2$, ..., $x_n$ avec les probabilités $p_1$, $p_2$, ..., $p_n$, l'espérance de X est définie comme: $$E(X)=x_1p_1+x_2p_2+\ldots+x_np_n$$
 
@@ -322,6 +328,8 @@ $$ \dfrac{300\$\times 1}{200}+\dfrac{0\$\times 199}{200} = 1,50\$ $$
 
 - La loi binomiale modélise la fréquence du nombre de succès obtenus lors de la répétition de plusieurs expériences aléatoires identiques et indépendantes.
 
+- Correspond à une pige **avec** remise.
+
 - Soit $n$ le nombre d'expériences et $p$ la probabilité de succès, on la note $X\sim B(n,p)$.
 
 - $P(X=x)=\binom{n}{x} p^x (1-p)^{n-x}$
@@ -333,6 +341,8 @@ $$ \dfrac{300\$\times 1}{200}+\dfrac{0\$\times 199}{200} = 1,50\$ $$
 ## La loi hypergéométrique
 
 - On tire simultanément $n$ boules dans une urne contenant $N_1=pN$ boules gagnantes et $N_2=qN$ boules perdantes (avec $q=1-p$). On compte alors le nombre de boules gagnantes extraites.
+
+- Correspond à une pige **sans** remise.
 
 - $P(X=x) = \dfrac{\binom{pN}{x}\binom{qN}{n-x}}{\binom{N}{n}}$
 
@@ -370,6 +380,8 @@ class: inverse, center, middle
 | 3 numéros sur 6   | $\frac{197\ 600}{9\ 366\ 819}$    | 5$             |
 | 2 numéros sur 6   | $\frac{1\ 370\ 850}{9\ 366\ 819}$ | Billet gratuit |
 
+--
+
 $$
 \begin{align*}
 & \dfrac{1\ 000\ 000\$}{9\ 366\ 819}+\dfrac{4\ 000\$ \times 240}{9\ 366\ 819}+\dfrac{150\$\times 11\ 700}{9\ 366\ 819}+\dfrac{5\$ \times 197\ 600}{9\ 366\ 819}+\\
@@ -399,7 +411,7 @@ class:inverse, center, middle
 
 - Le gros lot était par contre d'un maximum de 2 000 000$.
 
-- Si le gros lot atteignait 2 000 000$ et que personne ne le gagnait, *une partie de l'argent du gros lot était redistribuée aux lots de moindre valeur*.
+- Si le gros lot atteignait 2 000 000$ et que personne ne le gagnait, **une partie de l'argent du gros lot était redistribuée aux lots de moindre valeur**.
 
 ---
 
@@ -413,11 +425,15 @@ class:inverse, center, middle
 | 3 numéros sur 6   | $\frac{197\ 600}{9\ 366\ 819}$    | 5$             | 26,85$           |
 | 2 numéros sur 6   | $\frac{1\ 370\ 850}{9\ 366\ 819}$ | Billet gratuit | Billet gratuit   |
 
+--
+
 $$
 \begin{align*}
 \dfrac{22\ 096\$ \times 240}{9\ 366\ 819}+\dfrac{807,52\$\times 11\ 700}{9\ 366\ 819}+\dfrac{26,85\$ \times 197\ 600}{9\ 366\ 819} \approx 2,14\$
 \end{align*}
 $$
+
+--
 
 .center[
 ## Un billet rapporte donc en "moyenne" 0,14$!
@@ -427,31 +443,40 @@ $$
 
 ## Supposons que nous achetions 200 000 billets
 
-- Supposons que le gros lot n'est pas gagné.
+| Nombre de numéros | Nombre de billets probable | Prix probable |
+|-------------------|----------------------------|---------------|
+| Les 6 numéros     |                            |               |
+| 5 numéros sur 6   | 5                          | 110 480$      |
+| 4 numéros sur 6   | 250                        | 201 880$      |
+| 3 numéros sur 6   | 4 219                      | 113 280$      |
+| 2 numéros sur 6   | 29 283                     |               |
+| Total             |                            | 425 640$      |
 
-- On s'attend à avoir environ 5 billets avec 5 des 6 numéros gagnants pour un revenu attendu de 110 480$.
-
-- On s'attend à avoir environ 250 billets avec 4 des 6 numéros gagnants pour un revenu attendu de 201 880$.
-
-- On s'attend à avoir environ 4 219 billets avec 3 des 6 numéros gagnants pour un revenu attendu de 113 280$.
-
-- On s'attend donc à un revenu total de 425 640$.
-
-- On s'attend à avoir environ 29 283 billets avec 2 des 6 numéros gagnants, ce qui implique 29 283 billets gratuits pour la prochaine loterie, donc une économie de 58 566$!
+Environ 29 283 billets avec 2 des 6 numéros gagnants, donc 29 283 billets gratuits pour la prochaine loterie, donc une économie de 58 566$!
 
 ---
 
 ## Supposons que nous achetions 200 000 billets
 
-- Pour un investissement de 400 000$ (les billets coûtent 2$).
+- Investissement de 400 000$ (les billets coûtent 2$).
 
-- Un revenu de 425 640$, ce qui implique un profit de 6,41% sur l'investissement de départ.
+- Revenu de 425 640$ (6,41% de profit).
 
-- Si on réutilise les 29 283 billets gratuits, qui représentent une économie  de 58 566$, on peut acheter 200 000 billets pour un prix de 341 434$.
+- 29 283 billets gratuits pour le prochain tirage (économie  de 58 566$).
 
-- Si on suppose de recevoir le même revenu au prochain tirage, ça représente un profit de 84 206$ ou 24,66% de l'investissement initial!
+- 200 000 billets pour un prix de 341 434$.
+
+- Au prochain tirage, profit potentiel de 84 206$ ou 24,66% de l'investissement initial!
+
+--
 
 - Bien sûr, il y a le risque que le gros lot soit gagné...
+
+---
+
+class:center, middle, inverse
+
+# Qui a profité du *rolldown*?
 
 ---
 
@@ -465,8 +490,6 @@ Image credit: [Huffington Post](https://highline.huffingtonpost.com/articles/en/
 ---
 
 ## Gerard Selbee
-
-TO DO: BIOGRAPHIE RAPIDE
 
 - En 1966, en travaillant pour *Kellog's*, il déchiffre le code de la compagnie *General Mills* qui indiquait l'usine, le quart de travail, la date et l'heure de la cuisson de leurs céréales.
 
@@ -489,6 +512,8 @@ La première fois que Selbee joue à CashWinFall, il perd de l'argent.
 Il comprend qu'il n'a pas investi suffisament d'argent pour gagner.
 ]
 
+--
+
 .pull-right[
 Trois mois plus tard, il joue une seconde fois à CashWinFall.
 
@@ -499,9 +524,11 @@ Trois mois plus tard, il joue une seconde fois à CashWinFall.
 
 ]
 
+--
+
 - Les terminaux de lotterie ne pouvaient qu'imprimer 10 coupons à la fois, avec au maximum 10 billets par coupons. Pour investir 200 000$ à cette loterie, il fallait passer des heures et des heures devant la machine.
 
-- GERARD SELBEE CHOISISSAIT SES BILLETS ALÉATOIREMENT!
+- GERARD SELBEE CHOISISSAIT SES BILLETS ALÉATOIREMENT ET AVEC REMISE!
 
 ---
 
@@ -525,7 +552,7 @@ knitr::include_graphics("fig/random_strategy_investment.PNG")
 
 - Harvey estime que le groupe a fait un profit de 700 000$ cette journée-là.
 
-- JAMES HARVEY CHOISISSAIT SES BILLETS NON-ALÉATOIREMENT!
+- JAMES HARVEY CHOISISSAIT SES BILLETS NON-ALÉATOIREMENT, DONC SANS REMISE!
 
 ---
 
@@ -568,7 +595,7 @@ class:inverse, center, middle
 
 ## Le paradoxe des anniversaires
 
-- Le paradoxe des anniversaires résulte de l'estimation probabiliste du nombre de personnes que l'on doit réunir pour avoir au moins une chance sur deux que deux personnes de ce groupe aient leur anniversaire le même jour. 
+- Quel est le nombre de personnes que nous devons réunir pour avoir au moins une chance sur deux que deux personnes de ce groupe aient leur anniversaire le même jour?
 
 --
 
@@ -586,13 +613,9 @@ class:inverse, center, middle
 
 ## Le paradoxe des anniversaires
 
-- On va calculer la probabilité que chaque personne ait un jour anniversaire *différent* de celui des autres : le contraire de ce que l’on cherche.
+- On calcule la probabilité que chaque personne ait un jour anniversaire *différent* de celui des autres.
 
 - Nous faisons une hypothèse d'équiprobabilité des jours de naissance.
-
-- Nous allons compter le nombre de cas où $n$ personnes ont des jours d'anniversaires différents et nous diviserons par le nombre de possibilités.
-
-- Il y a $n$ personnes, pour chacune il y a 365 jours possibles, donc au total si on ne se fixe aucune contrainte, il y a $365^n$ possibilités.
 
 - La première personne a 365 choix, la seconde 364, la troisième 363 et ainsi de suite.
 
@@ -675,11 +698,11 @@ birthday_table %>%
 
 ## La stratégie de Selbee
 
-- On utilise la même stratégie que pour le paradoxe des anniversaires.
+- Même stratégie que pour le paradoxe des anniversaires.
 
-- Il y a $n$ billets, pour chacun il y a $\binom{46}{6}=$ `r format(choose(46,6),big.mark = " ")` billets possibles, donc au total si on ne se fixe aucune contrainte, il y a $(9\ 366\ 819)^n$ possibilités.
+- Il y a $n$ billets, pour chacun il y a $\binom{46}{6}=$ `r format(choose(46,6),big.mark = " ")` billets possibles.
 
-- Le première billet a 9 366 819 choix, le second 9 366 818, le troisième 9 366 817 et ainsi de suite.
+- Le premier billet a 9 366 819 choix, le second 9 366 818, le troisième 9 366 817 et ainsi de suite.
 
 $$
 \begin{aligned}
@@ -743,12 +766,6 @@ cashwinfall %>% ggplot(aes(x=n))+
 
 ---
 
-## Anecdote
-
-> Dans Le Livre qui rend fou, Raymond Smullyan raconte qu'il a fait établir la formule à ses 19 élèves. Il conclut après application numérique qu'il y a nettement moins d'une chance sur deux (un peu moins de 38 %) pour que deux élèves aient leur anniversaire le même jour. Un élève lui répond qu'il parie que c'est tout de même le cas. Le professeur fait l'appel en demandant aux élèves de donner leur date de naissance, et éclate de rire avant la fin, suivi de toute la classe, en se souvenant que deux de ses élèves sont jumeaux.
-
----
-
 class:inverse, center, middle
 
 # La loterie Transylvanienne
@@ -761,7 +778,7 @@ class:inverse, center, middle
 
 ---
 
-## La loterie transylvanienne (version 1)
+## La loterie transylvanienne
 
 - C'est une loterie du type 3/7; c'est-à-dire que trois nombres sont choisis aléatoirement (sans remise) entre 1 et 7 inclusivement.
 
@@ -785,7 +802,7 @@ loterie1 %>%
 
 ---
 
-## La loterie transylvanienne (version 1)
+## La loterie transylvanienne
 
 - C'est une loterie du type 3/7; c'est-à-dire que trois nombres sont choisis aléatoirement (sans remise) entre 1 et 7 inclusivement.
 
@@ -886,43 +903,13 @@ Je gagne donc...
 
 ---
 
-## La loterie transylvanienne (version 2)
-
-- C'est une loterie du type 3/14; c'est-à-dire que trois nombres sont choisis aléatoirement (sans remise) entre 1 et 14 inclusivement.
-
-- Le joueur gagne si deux des trois nombres sur un certain billet sont parmis ceux choisis aléatoirement.
-
-- Le nombre de billets différents est de $\binom{14}{3}=$ `r format(choose(14,3),big.mark = " ")`.
-
-- Nous désirons savoir combien de billets le joueur doit acheter pour être certain de gagner.
-
----
-
-class:center, middle
-
-```{r billets-differents-loterie-2, warning=FALSE, message=FALSE}
-loterie2 <- as_tibble(combinations(14,3,1:14), .name_repair = "unique") 
-colnames(loterie2) <- c("Nombre 1", "Nombre 2", "Nombre 3")
-loterie2 %>% 
-  kbl() %>% 
-  scroll_box(height = "600px")
-```
-
----
-
 class: inverse, center, middle
 
 # Comment choisir les numéros pour s'assurer de gagner?
 
----
+--
 
-## Le plan de Fano
-
-- En géométrie projective finie, le plan de Fano, nommé ainsi d'après le mathématicien Gino Fano, est le plus petit plan projectif fini.
-
-- C'est-à-dire qu'il comporte le plus petit nombre de points et de droites, à savoir 7 de chaque. 
-
-- C'est le seul plan projectif (au sens des axiomes d'incidence) de 7 points, et c'est le plan projectif sur le corps fini à deux éléments.
+## En utilisant la géométrie et le plan de Fano
 
 ---
 
@@ -1141,8 +1128,6 @@ ncashwinfall <- nrow(cashwinfall)
 nreject <- nrow(reject)
 ```
 
----
-
 ## R. H. F. Denniston
 
 - Le système qui nous intéresse est $S(5,6,48)$.
@@ -1153,9 +1138,9 @@ nreject <- nrow(reject)
 
 ---
 
-```{r}
+```{r, denniston-list}
 denniston %>% 
-  head(100) %>% 
+  head(500) %>% 
   kbl() %>% 
   scroll_box(height = "600px")
 ```
@@ -1166,15 +1151,13 @@ denniston %>%
 
 - CashWinFall est une loterie à seulement 46 numéros. 
 
-- On doit donc détruire la symétrie de la liste de Denniston en enlevant tous les billets contenant un 47 ou un 48.
+- On doit enlever tous les billets contenant un 47 ou un 48.
 
 - Ça nous donne une liste de `r format(nrow(cashwinfall),big.mark = " ")` combinaisons de 6 numéros.
 
 - Qu'arrive-t'il si nous jouons à CashWinFall avec ces `r format(nrow(cashwinfall),big.mark = " ")` billets?
 
 ---
-
-## CashWinFall et Denniston
 
 ```{r, random-number-seed, echo=FALSE}
 set.seed(42)
@@ -1188,7 +1171,7 @@ t5 <- wticket[c(1,3,4,5,6)]
 t6 <- wticket[c(2,3,4,5,6)]
 ```
 
-- Supposons que le billet gagnant est le `r wticket`.
+## `r wticket`
 
 - Vous avez `r format(nrow(cashwinfall),big.mark = " ")` chances sur `r format(choose(46,6),big.mark = " ")` de gagner le gros lot, soit environ `r format(nrow(cashwinfall)/choose(46,6)*100)`% des chances.
 
@@ -1198,13 +1181,14 @@ t6 <- wticket[c(2,3,4,5,6)]
 
 ## `r wticket`
 
-- Avez-vous un billet avec `r t1`? *Un* des billets de Denniston possède cette combinaison.
 
-- La seule manière de ne pas l'avoir est que le billet de Denniston était `r c(t1,47)` ou `r c(t1,48)`.
+Avez-vous un billet avec `r t1`? *Un* des billets de Denniston possède cette combinaison.
 
-- Mais qu'en est-il de la combinaison `r t2`? Si 47 faisait partie de `r c(t1,47)`, il est impossible que `r c(t2,47)` fasse partie de la liste de Denniston, car vous auriez deux billets avec la même combinaison de cinq numéros.
+La seule manière de ne pas l'avoir est que le billet de Denniston était `r c(t1,47)` ou `r c(t1,48)`.
 
-- Le raisonnement est identique avec 48.
+Mais qu'en est-il de la combinaison `r t2`? Si 47 faisait partie de `r c(t1,47)`, il est impossible que `r c(t2,47)` fasse partie de la liste de Denniston, car vous auriez deux billets avec la même combinaison de cinq numéros.
+
+Le raisonnement est identique avec 48.
 
 ---
 
@@ -1213,17 +1197,17 @@ t6 <- wticket[c(2,3,4,5,6)]
 De toutes les combinaisons possibles de cinq numéros parmi 6:
 
 .center[
-`r t1`
+### `r t1`
 
-`r t2`
+### `r t2`
 
-`r t3`
+### `r t3`
 
-`r t4`
+### `r t4`
 
-`r t5`
+### `r t5`
 
-`r t6`
+### `r t6`
 ]
 
 Vous êtes *assurés* d'en avoir au moins quatre! 
