--- a/docs/index.Rmd
+++ b/docs/index.Rmd
@@ -209,7 +209,7 @@ $$P(\text{obtenir une somme de 7})=\frac{6}{36}=\frac{1}{6}$$
 
 - En mathématiques, une combinaison est une sélection d'objets choisis parmi une collection, de telle manière à ce que l'ordre de sélection n'a pas d'importance.
 
-- Le nombre de combinanisons est donné par le coefficient binomial:
+- Le nombre de combinaisons est donné par le coefficient binomial:
 
 $$\binom{n}{k}=C_k^n=\dfrac{n!}{k!(n-k)!}$$
 
@@ -338,18 +338,6 @@ $$ \dfrac{300\$\times 1}{200}+\dfrac{0\$\times 199}{200} = 1,50\$ $$
 
 ---
 
-## La loi hypergéométrique
-
-- On tire simultanément $n$ boules dans une urne contenant $N_1=pN$ boules gagnantes et $N_2=qN$ boules perdantes (avec $q=1-p$). On compte alors le nombre de boules gagnantes extraites.
-
-- Correspond à une pige **sans** remise.
-
-- $P(X=x) = \dfrac{\binom{pN}{x}\binom{qN}{n-x}}{\binom{N}{n}}$
-
-- $E(X) = np$
-
----
-
 class: inverse, center, middle
 
 # Cash WinFall
@@ -403,7 +391,7 @@ class:inverse, center, middle
 
 ---
 
-## Le "Roll-Down"
+## Le «Roll-Down»
 
 - Le gros lot débutait à 500 000$.
 
@@ -413,11 +401,14 @@ class:inverse, center, middle
 
 - Si le gros lot atteignait 2 000 000$ et que personne ne le gagnait, **une partie de l'argent du gros lot était redistribuée aux lots de moindre valeur**.
 
+
+
+
 ---
 
-## Le "Roll-Down" du 8 février 2010
+## Le «Roll-Down» du 8 février 2010
 
-| Nombre de numéros | Probabilité                       | Prix habituel  | Prix "roll-down" |
+| Nombre de numéros | Probabilité                       | Prix habituel  | Prix «roll-down» |
 |-------------------|-----------------------------------|----------------|------------------|
 | Les 6 numéros     | $\frac{1}{9\ 366\ 819}$           | Variable       | Pas gagné        |
 | 5 numéros sur 6   | $\frac{240}{9\ 366\ 819}$         | 4 000$         | 22 096$          |
@@ -436,7 +427,7 @@ $$
 --
 
 .center[
-## Un billet rapporte donc en "moyenne" 0,14$!
+## Un billet rapporte donc en «moyenne» 0,14$!
 ]
 
 ---
@@ -476,7 +467,7 @@ Environ 29 283 billets avec 2 des 6 numéros gagnants, donc 29 283 billets gratu
 
 class:center, middle, inverse
 
-# Qui a profité du *rolldown*?
+# Qui a profité du «rolldown»?
 
 ---
 
@@ -519,8 +510,8 @@ Trois mois plus tard, il joue une seconde fois à CashWinFall.
 
 | 8 000$ | Argent investi |
 |--------|----------------|
-| 15 700$ | Argent gagné   |
-| +7 700$   | Profit         |
+| 15 700$| Argent gagné   |
+| +7 700$| Profit         |
 
 ]
 
@@ -548,7 +539,7 @@ knitr::include_graphics("fig/random_strategy_investment.PNG")
 
 - Durant les années qui suivent, la loterie devient un travail à temps plein pour Harvey. 
 
-- Le 16 août 2010, un *roll-down* arrive, en grande partie en raison de l'achat massif de 700 000!!! billets, tous remplis à la main par *RANDOM STRATEGIES INVESTMENTS*.
+- Le 16 août 2010, un «roll-down» arrive, en grande partie en raison de l'achat massif de 700 000!!! billets, tous remplis à la main par *RANDOM STRATEGIES INVESTMENTS*.
 
 - Harvey estime que le groupe a fait un profit de 700 000$ cette journée-là.
 
@@ -599,7 +590,7 @@ class:inverse, center, middle
 
 --
 
-- Il se trouve que ce nombre est 23, ce qui choque un peu l'intuition.
+- ### 23
 
 --
 
@@ -1159,19 +1150,15 @@ denniston %>%
 
 ---
 
-```{r, random-number-seed, echo=FALSE}
-set.seed(42)
-wticket <- sort(sample(46,6))
+## On pige six numéros au hasard qui forment le billet gagnant
 
-t1 <- wticket[c(1,2,3,4,5)]
-t2 <- wticket[c(1,2,3,4,6)]
-t3 <- wticket[c(1,2,3,5,6)]
-t4 <- wticket[c(1,2,4,5,6)]
-t5 <- wticket[c(1,3,4,5,6)]
-t6 <- wticket[c(2,3,4,5,6)]
-```
+--
 
+.center[
 ## 1-10-18-25-36-37
+]
+
+--
 
 - Vous avez `r format(nrow(cashwinfall),big.mark = " ")` chances sur `r format(choose(46,6),big.mark = " ")` de gagner le gros lot, soit environ `r format(nrow(cashwinfall)/choose(46,6)*100)`% des chances.
 
@@ -1245,6 +1232,10 @@ ou
 ### <font color="blue">1</font>-<font color="blue">10</font>-<font color="blue">18</font>-<font color="blue">25</font>-37-<font color="blue">48</font>
 ]
 
+--
+
+### Si 47 (ou 48) vous fait rater une combinaison, il ne peut pas vous en faire rater une autre!
+
 ---
 
 ## 1-10-18-25-36-37
@@ -1269,27 +1260,68 @@ Vous êtes *assurés* d'en avoir au moins quatre!
 
 ---
 
-## 1-10-18-25-36-37
+## Lors du tirage
 
 ```{r, proba-denniston}
-pjackpot <- nrow(cashwinfall)/choose(46,6)*100
-p4 <- ((n47-n47_48)/nrow(denniston))^2*100
-p5 <- (n47+n48-n47_48)/nrow(denniston)*100
-p6 <- 100-p4-p5-pjackpot
+pjackpot <- nrow(cashwinfall)/choose(46,6)
+
+tjackpot <- tribble(
+  ~Résultat, ~Probabilité,
+  "Le gros lot", pjackpot
+)
+
+p4 <- ((n47-n47_48)/nrow(denniston))^2
+p5 <- (n47+n48-n47_48)/nrow(denniston)
+p6 <- 1-p4-p5-pjackpot
+pdenniston <- tribble(
+  ~Résultat, ~Probabilité,
+  "4 billets 5 dans 6", p4,
+  "5 billets 5 dans 6", p5,
+  "6 billets 5 dans 6", p6,
+)
 ```
 
-Si vous acheter les `r format(nrow(cashwinfall),big.mark = " ")` billets de Denniston vous avez:
+```{r, proba-selbee}
+p <- choose(6,5)*choose(40,1)/choose(46,6)
+n <- 217833
 
-`r pjackpot`% de gagner le gros lot
+pselbee <- tribble(
+  ~Résultat, ~Probabilité,
+  "Aucun 5 dans 6", dbinom(0,n,p),
+  "1 billet 5 dans 6", dbinom(1,n,p),
+  "2 billets 5 dans 6", dbinom(2,n,p),
+  "3 billets 5 dans 6", dbinom(3,n,p),
+  "4 billets 5 dans 6", dbinom(4,n,p),
+  "5 billets 5 dans 6", dbinom(5,n,p),
+  "6 billets 5 dans 6", dbinom(6,n,p),
+  "Plus de 6 billets de 5 dans 6", pbinom(6,n,p,lower.tail = FALSE)
+)
+```
 
-`r p6`% de gagner six des combinaisons 5 dans 6
+En achetant `r format(nrow(cashwinfall),big.mark = " ")` billets, vous avez une probabilité de `r pjackpot` de gagner le gros lot.
 
-`r p5`% de gagner cinq des combinaisons 5 dans 6
+.pull-left[
+Si vous achetez les `r format(nrow(cashwinfall),big.mark = " ")` billets de Denniston vous avez:
 
-`r p4`% de gagner quatre des combinaisons 5 dans 6
+```{r pdenniston-table}
+pdenniston %>% 
+  kable(format = "html") %>% 
+  kable_styling(bootstrap_options = c("striped", "hover", "condensed"),font_size = 16)
+```
+]
 
+.pull-right[
+Si vous achetez les `r format(nrow(cashwinfall),big.mark = " ")` billets de Selbee vous avez:
+```{r pselbee-table}
+pselbee %>% 
+  kable(format = "html") %>% 
+  kable_styling(bootstrap_options = c("striped", "hover", "condensed"),font_size = 16)
+```
+]
 
+---
 
-
+background-image: url(https://media.giphy.com/media/fyzODLrZORdUA/giphy.gif?cid=ecf05e47rhx3otx5micnwsvn4zexlfbbbm7d8fogdeauidfn&rid=giphy.gif&ct=g)
+background-size: contain
 
 
